# app/Entities/Quiz/InputQuiz.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Entities\Quiz;
+
+/**
+ * @OA\Schema(
+ *     required={
+ *         "question",
+ *     }
+ * )
+ */
+class InputQuiz
+{
+    /**
+     * @OA\Property(
+     *     type="string",
+     *     maxLength=255,
+     * )
+     * @var
+     */
+    public $question;
+}
+
