# app/Http/Controllers/Api/QuizQuestionController.php
@@ -2,111 +2,88 @@
 
 namespace App\Http\Controllers\Api;
 
-use App\Models\{
-    PricePeriod,
-};
-use App\Http\Requests\Rent\{
-    InputRentRequest,
-    UpdateRentRequest,
-};
 use App\Http\Controllers\Controller;
-use App\Http\Resources\PricePeriodResource;
+use App\Http\Requests\Question\StoreQuestionRequest;
+use App\Http\Resources\QuizQuestionResource;
+use App\Models\QuizAnswer;
+use App\Models\QuizQuestion;
+use Illuminate\Http\Request;
 
-
-/**
- * @OA\Tag(
- *     name="Rents",
- *     description="Rents based routes",
- * )
- */
-class RentController extends Controller
+class QuizQuestionController extends Controller
 {
-     /**
+    /**
      * @OA\Get(
-     *     path="/rents",
-     *     tags={"Rents"},
-     *     summary="Get Rents",
+     *     path="/quizs/questions",
+     *     tags={"Quizs"},
+     *     security={{"bearerAuth": {}}},
+     *     summary="Get Quizs qestions",
      *     @OA\Response(
      *         response=200,
      *         description="Successful operation",
-     *         @OA\JsonContent(
-     *             @OA\Property(
-     *                 property="data",
-     *                 type="object",
-     *                 ref="#/components/schemas/Rent",
-     *             ),
-     *         ),
+     *         @OA\JsonContent(ref="#/components/schemas/IndexQuiz"),
      *     ),
      *     @OA\Response(response=401, description="Unauthorized", @OA\JsonContent(ref="#/components/schemas/DefaultUnauthorized")),
-     *     @OA\Response(response=403, description="Forbidden", @OA\JsonContent(ref="#/components/schemas/DefaultForbidden")),
      *     @OA\Response(response=404, description="Not Found", @OA\JsonContent(ref="#/components/schemas/DefaultMessage")),
      * )
      */
     public function index()
     {
-        $items = PricePeriod::get();
+       $items = QuizQuestion::with(['answers'])->get();
 
-        return PricePeriodResource::collection($items);
+       return QuizQuestionResource::collection($items);
     }
 
     /**
      * @OA\Get(
-     *     path="/rents/{id}",
-     *     tags={"Rents"},
-     *     summary="Get Rent by ID",
+     *     path="/quizs/questions/{id}",
+     *     tags={"Quizs"},
      *     security={{"bearerAuth": {}}},
+     *     summary="Get Quizs qestion by ID",
      *     @OA\Parameter(
      *         required=true,
      *         name="id",
      *         in="path",
-     *         description="ID",
+     *         description="Question ID",
      *         @OA\Schema(type="integer", minimum=1)
      *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Successful operation",
-     *         @OA\JsonContent(
-     *             @OA\Property(
-     *                 property="data",
-     *                 type="object",
-     *                 ref="#/components/schemas/Rent",
-     *             ),
-     *         ),
+     *         @OA\JsonContent(ref="#/components/schemas/IndexQuiz"),
      *     ),
      *     @OA\Response(response=401, description="Unauthorized", @OA\JsonContent(ref="#/components/schemas/DefaultUnauthorized")),
-     *     @OA\Response(response=403, description="Forbidden", @OA\JsonContent(ref="#/components/schemas/DefaultForbidden")),
      *     @OA\Response(response=404, description="Not Found", @OA\JsonContent(ref="#/components/schemas/DefaultMessage")),
      * )
      */
     public function show(int $id)
     {
-        $item = PricePeriod::find($id);
+        $item = QuizQuestion::with(['answers'])->find($id);
 
         if (!$item) {
-            return $this->errorBadRequest(null, 'Rent period not found!');
+            return $this->errorNotFound('Question not found');
         }
 
-        return new PricePeriodResource($item);
+        return new QuizQuestionResource($item);
     }
 
-     /**
+    /**
      * @OA\Post(
-     *     path="/rents",
-     *     tags={"Rents"},
-     *     summary="Create Rent",
+     *     path="/quizs/questions",
+     *     tags={"Quizs"},
+     *     summary="Create question",
      *     security={{"bearerAuth": {}}},
      *     @OA\RequestBody(
      *         required=false,
-     *         @OA\JsonContent(ref="#/components/schemas/InputRent"),
+     *         @OA\JsonContent(ref="#/components/schemas/InputQuiz"),
      *     ),
      *     @OA\Response(
-     *         response=201,
+     *         response=200,
      *         description="Successful operation",
      *         @OA\JsonContent(
      *             @OA\Property(
      *                 property="data",
      *                 type="object",
-     *                 ref="#/components/schemas/Rent",
+     *                 ref="#/components/schemas/IndexQuiz",
      *             ),
      *         ),
      *     ),
@@ -115,37 +92,55 @@ class RentController extends Controller
      *     @OA\Response(response=403, description="Forbidden", @OA\JsonContent(ref="#/components/schemas/DefaultForbidden")),
      * )
      */
-    public function store(InputRentRequest $request)
+    public function store(StoreQuestionRequest $request)
     {
-        $data = $request->validated();
         $user = auth('api')->user();
+        $data = $request->validated();
 
-        $item = new PricePeriod();
-        $item->price = $request->has('price') ? $data['price'] : PricePeriod::DEFAULT_PRICE;
-        $item->start = $request->has('start') ? $data['start'] : now();
-        $item->end = $request->has('end') ? $data['end'] : now();
+        $item = new QuizQuestion();
+        $item->question = $request->has('question') ? (string) $data['question'] : '';
         $item->created_by = $user->id;
         $item->updated_by = $user->id;
         $item->save();
 
-        return new PricePeriodResource(PricePeriod::findOrFail($item->id));
+        if ($request->has('answers')) {
+            $answers = [];
+
+            foreach ($data['answers'] as $answer) {
+                $answers[] = [
+                    'question_id' => $item->id,
+                    'answer' => $answer['answer'] ?? '',
+                    'is_true' => $answer['is_correct'] ?? '',
+                    'created_at' => now(),
+                    'created_by' => (int) ($user->id),
+                    'updated_at' => now(),
+                    'updated_by' => (int) ($user->id),
+                ];
+            }
+
+            QuizAnswer::insert($answers);
+        }
+
+        $item->load(['answers']);
+
+        return new QuizQuestionResource($item); 
     }
 
     /**
      * @OA\Post(
-     *     path="/rents/{id}",
-     *     tags={"Rents"},
-     *     summary="Update Rent",
+     *     path="/quizs/questions/{id}",
+     *     tags={"Quizs"},
+     *     summary="Update question by ID",
      *     security={{"bearerAuth": {}}},
      *     @OA\RequestBody(
      *         required=false,
-     *         @OA\JsonContent(ref="#/components/schemas/InputRent"),
+     *         @OA\JsonContent(ref="#/components/schemas/InputQuiz"),
      *     ),
      *     @OA\Parameter(
      *         required=true,
      *         name="id",
      *         in="path",
-     *         description="ID",
+     *         description="Question ID",
      *         @OA\Schema(type="integer", minimum=1)
      *     ),
      *     @OA\Response(
@@ -155,7 +150,7 @@ class RentController extends Controller
      *             @OA\Property(
      *                 property="data",
      *                 type="object",
-     *                 ref="#/components/schemas/Rent",
+     *                 ref="#/components/schemas/IndexQuiz",
      *             ),
      *         ),
      *     ),
@@ -164,28 +159,51 @@ class RentController extends Controller
      *     @OA\Response(response=403, description="Forbidden", @OA\JsonContent(ref="#/components/schemas/DefaultForbidden")),
      * )
      */
-    public function update(int $id, UpdateRentRequest $request)
+    public function update(int $id, StoreQuestionRequest $request)
     {
         $user = auth('api')->user();
         $data = $request->validated();
 
-        $item = PricePeriod::findOrFail($id);
+        $item =  QuizQuestion::with(['answers'])->find($id);
 
-        $item->price = $request->has('price') ? $data['price'] : PricePeriod::DEFAULT_PRICE;
-        $item->start = $request->has('start') ? $data['start'] : now();
-        $item->end = $request->has('end') ? $data['end'] : now();
-        $item->updated_at = now();
+        if (!$item) {
+            return $this->errorNotFound('Question not found');
+        }
+
+        $item->question = $request->has('question') ? (string) $data['question'] : '';
+        $item->created_by = $user->id;
         $item->updated_by = $user->id;
         $item->save();
 
-        return new PricePeriodResource(PricePeriod::findOrFail($item->id));
+        if ($request->has('answers')) {
+            $item->answers()->delete();
+            $answers = [];
+
+            foreach ($data['answers'] as $answer) {
+                $answers[] = [
+                    'question_id' => $item->id,
+                    'answer' => $answer['answer'] ?? '',
+                    'is_true' => $answer['is_correct'] ?? '',
+                    'created_at' => now(),
+                    'created_by' => (int) ($user->id),
+                    'updated_at' => now(),
+                    'updated_by' => (int) ($user->id),
+                ];
+            }
+
+            QuizAnswer::insert($answers);
+        }
+
+        $item->load(['answers']);
+
+        return new QuizQuestionResource($item); 
     }
 
     /**
      * @OA\Delete(
-     *     path="/rents/{id}",
-     *     tags={"Rents"},
-     *     summary="Delete a rent category",
+     *     path="/quizs/questions/{id}",
+     *     tags={"Tests"},
+     *     summary="Delete a question",
      *     security={{"bearerAuth": {}}},
      *     @OA\Parameter(
      *         name="id",
@@ -202,11 +220,13 @@ class RentController extends Controller
      */
     public function destroy(int $id)
     {
-        $item = PricePeriod::find($id);
+        $item = QuizQuestion::with(['answers'])->find($id);
 
         if (!$item) {
-            return $this->errorBadRequest(null, 'Rent period not found!');
+            return $this->errorNotFound('Question not found');
         }
+
+        $item->answers()->delete();
         $item->delete();
 
         return $this->successNoContent();
