# app/Http/Resources/QuizAnswerResource.php
@@ -5,7 +5,7 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class PricePeriodResource extends JsonResource
+class QuizAnswerResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -16,11 +16,9 @@ class PricePeriodResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'price' => $this->price,
-            'end' => $this->end,
-            'start' => $this->start,
-            'created' => $this->created_at,
-            'updated' => $this->updated_at,
+            'question_id' => $this->question_id,
+            'answer' => $this->answer,
+            'correct' => $this->is_true,
         ];
     }
 }
