# app/Http/Resources/QuizQuestionResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class QuizQuestionResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'question' => $this->question,
+            'answers' => $this->relationLoaded('answers')
+            ? QuizAnswerResource::collection($this->answers)
+            : null,
+        ];
+
+
+    }
+}
